--- a/vr_test/android/app/src/main/AndroidManifest.xml
+++ b/vr_test/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.vr_test">
+
+   <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="vr_test"
         android:name="${applicationName}"
